# django-rest-framework-tutorial

./: .gitignore  db.sqlite3  main.py  manage.py  pyproject.toml
api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_orderitem_order.py
drf_tutorial/: asgi.py  settings.py  urls.py  wsgi.py
