[project]
name = "drf-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.11.1",
    "django>=6.0.5",
    "django-extensions>=4.1",
    "djangorestframework>=3.17.1",
    "pillow>=12.2.0",
    "sqlparse>=0.5.5",
    "tzdata>=2026.2",
]
